<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:opencv="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <org.opencv.android.JavaCameraView
        android:id="@+id/show_camera_activity_java_surface_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:screenOrientation="landscape"
        opencv:camera_id="any"
        opencv:show_fps="true" />

    <com.mahjong_winpoint_calculator.DrawImageView
        android:id="@+id/drawIV"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/deal_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentRight="true"
        android:text="@string/camera_take_photo" />

    <Button
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera_back_to_main" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/deal_btn"
        android:layout_alignParentRight="true"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="20dp"
        android:textSize="12sp"
        android:textColor="@color/colorAccent"
        android:text="@string/camera_hint" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deal_btn"
        android:layout_alignParentRight="true"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="0dp"
        android:textSize="12sp"
        android:layout_marginRight="70dp"
        android:text="@string/camera_hint_EN" />

</RelativeLayout>