<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="40dp"
        android:text="@string/main_title"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/main_to_manuallyAct_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/main_to_manuallyAct_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:text="@string/main_to_manual_btn"
        app:layout_constraintBottom_toTopOf="@+id/main_to_cameraAct_button"
        app:layout_constraintEnd_toEndOf="@+id/main_title"
        app:layout_constraintStart_toStartOf="@+id/main_title" />

    <Button
        android:id="@+id/main_to_cameraAct_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/main_to_camera_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/main_to_manuallyAct_button"
        app:layout_constraintStart_toStartOf="@+id/main_to_manuallyAct_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/main_to_galleryAct_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/main_to_gallery_btn"
        app:layout_constraintEnd_toEndOf="@+id/main_to_cameraAct_button"
        app:layout_constraintStart_toStartOf="@+id/main_to_cameraAct_button"
        app:layout_constraintTop_toBottomOf="@+id/main_to_cameraAct_button" />

    <Spinner
        android:id="@+id/languages_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>